--- a/Day1-ChangeBackgroundColor/style.css
+++ b/Day1-ChangeBackgroundColor/style.css
@@ -9,11 +9,20 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+}
+
+h1 {
+    font-size: 3rem;
 }
 
 .button {
-    padding: 1rem;
-    border: 1px solid #000000;
+    padding: 2rem;
+    font-size: 2rem;
+    font-weight: bold;
+    border: 2px solid #000000;
     tab-size: 2rem;
     cursor: pointer;
+    background-color: transparent;
+    margin-top: 2rem;
 }
