--- a/Day1-ChangeBackgroundColor/style.css
+++ b/Day1-ChangeBackgroundColor/style.css
@@ -31,6 +31,15 @@ h1 {
     margin-top: 2rem;
 }
 
+.copy {
+    padding: 1rem 2rem;
+    margin-top: 1rem;
+    background-color: transparent;
+    cursor: pointer;
+    border: 3px solid #000000;
+    font-weight: bold;
+}
+
 .right {
     width: 50%;
     display: flex;
@@ -41,6 +50,7 @@ h1 {
     width: 100%;
     min-height: 33.33333vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
