--- a/Day3-DiceeGame/style.css
+++ b/Day3-DiceeGame/style.css
@@ -2,3 +2,60 @@
     padding: 0;
     margin: 0;
 }
+
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+    background-color: #fbf8cc;
+}
+
+h1 {
+    padding: 4rem;
+    letter-spacing: 0.2rem;
+    color: #5f0f40;
+}
+
+.image {
+    position: absolute;
+    height: 200px;
+    width: 200px;
+    top: 115px;
+    left: 31.5%;
+}
+
+.players {
+    display: flex;
+    margin-top: 3rem;
+}
+
+.player {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.player > span {
+    display: block;
+    font-weight: bold;
+    font-size: 2rem;
+}
+
+.player1,
+.player2 {
+    min-height: 15rem;
+    min-width: 15rem;
+    margin: 4rem;
+    background-color: #e63946;
+    border-radius: 10%;
+}
+
+.play {
+    padding: 1rem 2rem;
+    background-color: #ffbe0b;
+    border-radius: 3%;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 2rem;
+}
