--- a/Day3-DiceeGame/style.css
+++ b/Day3-DiceeGame/style.css
@@ -51,6 +51,20 @@ h1 {
     border-radius: 10%;
 }
 
+.dice {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+}
+
+.bullet {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #e0e1dd;
+    margin: auto auto;
+}
+
 .play {
     padding: 1rem 2rem;
     background-color: #ffbe0b;
